# SlamWalker

./: .gitignore
arduino/motor_both/: motor_both.ino
arduino/test/: test.ino
maps/: auto_map.pgm  auto_map.yaml
scripts/: auto_calibrate.py  calibrate.py
src/slamwalker_bridge/slamwalker_bridge/: serial_bridge_node.py
src/slamwalker_bringup/config/: nav.rviz  slam_toolbox.yaml
src/slamwalker_bringup/launch/: bno055.launch.py  localization.launch.py  slamwalker_nav.launch.py  slamwalker_slam.launch.py
src/slamwalker_explore/: package.xml  setup.cfg  setup.py
src/slamwalker_explore/config/: explore.rviz  explore.yaml  nav2_explore.yaml
src/slamwalker_explore/launch/: slamwalker_explore.launch.py
src/slamwalker_explore/slamwalker_explore/: frontier_explorer_node.py  scan_resampler_node.py  session_manager_node.py
src/slamwalker_rviz_panel/: CMakeLists.txt  package.xml  plugins_description.xml
src/slamwalker_rviz_panel/include/slamwalker_rviz_panel/: walker_panel.hpp
src/slamwalker_rviz_panel/src/: walker_panel.cpp
