<?xml version="1.0"?>
<package format="3">
  <name>slamwalker_rviz_panel</name>
  <version>0.1.0</version>
  <description>RViz2 control panel for SlamWalker (start frontier / switch to Phase 2 / load map / reset pose).</description>
  <maintainer email="wl2464649623@gmail.com">KrisWonka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>std_srvs</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins_description.xml"/>
  </export>
</package>
